<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/icAddOption"
                android:layout_width="@dimen/emoji_size"
                android:layout_height="@dimen/emoji_size"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/ic_add_option" />

            <TextView
                android:id="@+id/tvAddDiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/icAddOption"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@id/icAddOption"
                android:layout_toRightOf="@id/icAddOption"
                android:paddingTop="@dimen/padding_small"
                android:textSize="@dimen/textSizeMedium"
                android:text="@string/add_a_diary_1" />

            <TextView
                android:id="@+id/tvAddNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAddDiary"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@id/icAddOption"
                android:layout_toRightOf="@id/icAddOption"
                android:textSize="@dimen/textSizeMedium"
                android:text="@string/add_a_note_1" />

            <TextView
                android:id="@+id/tvAddToDo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAddNote"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@id/icAddOption"
                android:layout_toRightOf="@id/icAddOption"
                android:textSize="@dimen/textSizeMedium"
                android:text="@string/add_a_to_do_1" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</layout>
