<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_dummy"
                android:textColor="@color/textWhite" />
        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:id="@+id/llEditOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:padding="@dimen/padding_small"
            android:background="@color/colorAccent"
            android:layout_alignParentBottom="true">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                app:srcCompat="@drawable/ic_gallary_24dp"/>

        </LinearLayout>


        <android.support.v7.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum=".5"
            android:layout_below="@id/toolBar"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/vHow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="How are you feeling?"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/textSizeMedium" />

                <View
                    android:id="@+id/v"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/vHow"
                    android:background="@color/colorPrimary" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/v"
                    android:hint="@string/add_a_title"
                    android:padding="@dimen/activity_horizontal_margin"
                    app:backgroundTint="@android:color/transparent" />

                <View
                    android:id="@+id/v1"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/etTitle"
                    android:background="@color/colorPrimary" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etDiary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/v1"
                    android:hint="@string/write_something"
                    android:gravity="top"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/textSize"
                    app:backgroundTint="@android:color/transparent" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</layout>
